--- a/app/src/main/res/layout/graph_activity.xml
+++ b/app/src/main/res/layout/graph_activity.xml
@@ -1,66 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:scrollbarStyle="outsideOverlay"
     tools:context=".GraphActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primaryColor"
-        android:elevation="2dp"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:title="TABLE"
-        />
-
-    <RelativeLayout
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-        <fragment
-                android:id="@+id/recommendation"
-                android:name="edu.osu.table.ui.graph.GraphFragment"
-                android:layout_width="266dp"
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/my_toolbar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="48dp"
-                android:layout_marginTop="68dp"
-                tools:layout="@layout/graph_fragment"/>
-
+                android:background="@color/primaryColor"
+                android:elevation="2dp"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="?attr/actionBarTheme"
+                app:title="TABLE"
+        />
         <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/battery_pie_chart_discharge"
-                android:layout_width="195dp"
-                android:layout_height="234dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginBottom="247dp"
+                android:layout_width="373dp"
+                android:layout_height="246dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
                 android:contentDescription="@string/discharge_pie">
-
         </com.github.mikephil.charting.charts.PieChart>
+
         <com.github.mikephil.charting.charts.PieChart
-                android:layout_width="190dp"
-                android:layout_height="233dp"
+                android:layout_width="373dp"
+                android:layout_height="246dp"
                 android:id="@+id/battery_pie_chart_charge"
-                android:layout_marginStart="194dp" android:layout_alignStart="@+id/battery_pie_chart_discharge"
                 android:contentDescription="@string/charge_pie"
-                android:layout_alignParentBottom="true" android:layout_marginBottom="247dp">
-
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp">
         </com.github.mikephil.charting.charts.PieChart>
+
+        <com.github.mikephil.charting.charts.LineChart
+                android:layout_width="373dp"
+                android:layout_height="246dp"
+                android:id="@+id/battery_first_wifi"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp">
+        </com.github.mikephil.charting.charts.LineChart>
+        <com.github.mikephil.charting.charts.LineChart
+                android:layout_width="373dp"
+                android:layout_height="246dp"
+                android:id="@+id/battery_second_wifi"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp">
+        </com.github.mikephil.charting.charts.LineChart>
+
+        <com.github.mikephil.charting.charts.LineChart
+                android:layout_width="373dp"
+                android:layout_height="246dp"
+                android:id="@+id/battery_third_wifi"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp">
+        </com.github.mikephil.charting.charts.LineChart>
+
+        <com.github.mikephil.charting.charts.LineChart
+                android:layout_width="373dp"
+                android:layout_height="246dp"
+                android:id="@+id/battery_new_graph"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp">
+        </com.github.mikephil.charting.charts.LineChart>
+
         <com.jjoe64.graphview.GraphView
                 android:id="@+id/battery_graph"
                 android:layout_width="321dp"
                 android:layout_height="211dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="8dp"
-                android:layout_alignStart="@+id/recommendation"
-                android:layout_marginStart="-12dp"/>
-    </RelativeLayout>
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="-2dp"/>
+    </LinearLayout>
 
-</RelativeLayout>
+</ScrollView>
