--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,42 +19,42 @@
 
         <!--Welcome Cardview -->
         <android.support.v7.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:elevation="12dp"
-            app:cardBackgroundColor="@color/darkPrimaryColor"
-            app:cardElevation="4dp">
+                android:layout_width="335dp"
+                android:layout_height="120dp"
+                app:cardCornerRadius="15dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:elevation="12dp"
+                app:cardBackgroundColor="@color/darkPrimaryColor"
+                app:cardElevation="4dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
 
-                android:orientation="vertical">
+                    android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="327dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="327dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="@string/welcome_button"
-                        android:textColor="@color/white"
-                        android:textSize="34sp" />
+                        android:orientation="vertical"
+                        android:padding="16dp">
 
                     <TextView
-                        android:layout_width="294dp"
-                        android:layout_height="58dp"
-                        android:text="@string/welcome_descriptor"
-                        android:textColor="@color/secondaryTextColor" />
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/welcome_button"
+                            android:textColor="@color/white"
+                            android:textSize="34sp"/>
+
+                    <TextView
+                            android:layout_width="294dp"
+                            android:layout_height="58dp"
+                            android:text="@string/welcome_descriptor"
+                            android:textColor="@color/secondaryTextColor"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -68,7 +68,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="0dp"
-                android:layout_marginTop="184dp"
+                android:layout_marginTop="157dp"
                 android:clickable="true"
                 android:onClick="onClickListenerGraph">
         </com.github.mikephil.charting.charts.LineChart>
@@ -77,9 +77,10 @@
         <android.support.v7.widget.CardView
             android:layout_width="160dp"
             android:layout_height="160dp"
+            app:cardCornerRadius="15dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="450dp"
+            android:layout_marginTop="415dp"
             android:layout_marginEnd="190dp"
             android:elevation="12dp"
             app:cardBackgroundColor="@color/darkPrimaryColor"
@@ -95,24 +96,24 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="@string/scan_button"
-                        android:textColor="@color/white"
-                        android:textSize="28sp" />
+                        android:orientation="vertical"
+                        android:padding="16dp">
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="58dp"
-                        android:text="@string/scan_descriptor"
-                        android:textColor="@color/secondaryTextColor" />
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:text="@string/scan_button"
+                            android:textColor="@color/white"
+                            android:textSize="28sp"/>
+
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="58dp"
+                            android:text="@string/scan_descriptor"
+                            android:textColor="@color/secondaryTextColor"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -122,10 +123,10 @@
         <android.support.v7.widget.CardView
             android:layout_width="160dp"
             android:layout_height="160dp"
-
+            app:cardCornerRadius="15dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginTop="450dp"
+            android:layout_marginTop="415dp"
             android:layout_marginEnd="10dp"
 
             android:elevation="12dp"
@@ -177,57 +178,13 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
-        <!--Settings Cardview -->
+        <!--Wifi Cardview -->
         <android.support.v7.widget.CardView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="625dp"
-            android:layout_marginEnd="190dp"
-            android:elevation="12dp"
-            app:cardBackgroundColor="@color/darkPrimaryColor"
-            app:cardElevation="4dp"
-            android:clickable="true"
-            android:onClick="onClickListenerSettings">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="@string/settings_button"
-                        android:textColor="@color/white"
-                        android:textSize="28sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="58dp"
-                        android:text="@string/settings_descriptor"
-                        android:textColor="@color/secondaryTextColor" />
-                </LinearLayout>
-
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-                android:layout_width="160dp"
+                android:layout_width="335dp"
                 android:layout_height="160dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="625dp"
-                android:layout_marginEnd="10dp"
+                app:cardCornerRadius="15dp"
+                android:layout_marginTop="600dp"
+                android:layout_centerHorizontal="true"
                 android:elevation="12dp"
                 app:cardBackgroundColor="@color/darkPrimaryColor"
                 app:cardElevation="4dp"
@@ -250,14 +207,16 @@
                     <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
+                            android:layout_marginBottom="4dp"
+
                             android:text="@string/wifi_button"
                             android:textColor="@color/white"
-                            android:textSize="28sp"/>
+                            android:textSize="40sp"/>
 
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="58dp"
+
                             android:text="@string/wifi_descriptor"
                             android:textColor="@color/secondaryTextColor"/>
                 </LinearLayout>
