--- a/app/src/main/res/layout/item_wifi_scan.xml
+++ b/app/src/main/res/layout/item_wifi_scan.xml
@@ -2,6 +2,8 @@
 <!-- XML Document Provided by Professor Adam Champion of The Ohio State University for use in
 Professor Dong Xuan's Mobile Handset System class with permission from Professor Champion.
 Other Documents provided by him are prefaced with this descriptor at the top of the file -->
+
+<!--
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,4 +18,47 @@ Other Documents provided by him are prefaced with this descriptor at the top of 
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"/>
+</LinearLayout>-->
+
+<android.support.v7.widget.CardView
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+app:cardElevation="10dp"
+app:cardCornerRadius="15dp"
+android:layout_margin="8dp"
+app:cardBackgroundColor="@color/darkPrimaryColor"
+>
+
+
+<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:background="?android:selectableItemBackground">
+
+    <TextView
+        android:id="@+id/scan_result_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"/>
+    <!--
+    <TextView
+        android:id="@+id/txtLength"
+        android:text="Length"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    -->
+
+
 </LinearLayout>
+
+</android.support.v7.widget.CardView>
