--- a/app/src/main/res/layout/activity_wifi.xml
+++ b/app/src/main/res/layout/activity_wifi.xml
@@ -1,35 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.WirelessDataFolder.WifiActivity">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent" tools:layout_editor_absoluteY="25dp">
+
 
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/my_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/primaryColor"
+                android:elevation="2dp"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="?attr/actionBarTheme"
+                app:title="TABLE"
+        />
         <TextView
-                android:text="TextView"
+
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/speedWifi"/>
+                android:layout_height="wrap_content" android:textSize="60sp"
+                android:id="@+id/speedDownload"
+                android:text="00.0 Mbps"
+                android:gravity="center"
+
+        />
         <TextView
-                android:text="TextView"
+                android:id="@+id/pinglatency"
+                android:text="00.0 ms"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/speedDownload"/>
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:gravity="center"
+                />
         <TextView
-                android:text="TextView"
+                android:text=""
+                android:id="@+id/speed"
+
+
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/speed"/>
-        <Button
-                android:text="Ping"
+                android:layout_height="wrap_content"
+                android:gravity="center"/>
+
+        <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/buttonWifi"/>
-        <Button
-                android:text="Download"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/buttonDownload"/>
+                android:layout_height="match_parent">
+            <Button
+                    android:text="@string/wifi_ping"
+                    android:id="@+id/buttonPing"
+                    style="@style/Widget.AppCompat.Button.Colored"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"  android:layout_weight="1"/>
+            <Button
+                    android:text="@string/wifi_download"
+                    android:id="@+id/buttonDownload"
+                    style="@style/Widget.AppCompat.Button.Colored"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"  android:layout_weight="1"/>
+        </LinearLayout>
+
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
