--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,44 +19,35 @@
 
         <!--Welcome Cardview -->
         <android.support.v7.widget.CardView
-                android:layout_width="335dp"
+                android:layout_width="match_parent"
                 android:layout_height="120dp"
                 app:cardCornerRadius="15dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:elevation="12dp"
                 app:cardBackgroundColor="@color/darkPrimaryColor"
-                app:cardElevation="4dp">
+                app:cardElevation="4dp" android:id="@+id/title">
 
             <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-
-                    android:orientation="vertical">
-
-                <LinearLayout
-                        android:layout_width="327dp"
+                <TextView
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="16dp">
+                        android:layout_marginBottom="8dp"
+                        android:text="@string/welcome_button"
+                        android:textColor="@color/white"
+                        android:textSize="34sp"/>
 
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:text="@string/welcome_button"
-                            android:textColor="@color/white"
-                            android:textSize="34sp"/>
-
-                    <TextView
-                            android:layout_width="294dp"
-                            android:layout_height="58dp"
-                            android:text="@string/welcome_descriptor"
-                            android:textColor="@color/secondaryTextColor"/>
-                </LinearLayout>
-
+                <TextView
+                        android:layout_width="294dp"
+                        android:layout_height="58dp"
+                        android:text="@string/welcome_descriptor"
+                        android:textColor="@color/secondaryTextColor"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -75,112 +66,84 @@
 
         <!--Scan Cardview -->
         <android.support.v7.widget.CardView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            app:cardCornerRadius="15dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="415dp"
-            android:layout_marginEnd="190dp"
-            android:elevation="12dp"
-            app:cardBackgroundColor="@color/darkPrimaryColor"
-            app:cardElevation="4dp"
-            android:clickable="true"
-            android:onClick="onClickListenerScan">
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:cardCornerRadius="15dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="430dp"
+                android:elevation="12dp"
+                app:cardBackgroundColor="@color/darkPrimaryColor"
+                app:cardElevation="4dp"
+                android:clickable="true"
+                android:onClick="onClickListenerScan" android:layout_alignParentStart="true"
+                android:layout_marginStart="14dp" android:layout_marginBottom="25dp"
+                android:id="@+id/scancard">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-
-                android:orientation="vertical">
-
-                <LinearLayout
+                <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="16dp">
+                        android:layout_marginBottom="8dp"
+                        android:text="@string/scan_button"
+                        android:textColor="@color/white"
+                        android:textSize="28sp"/>
 
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:text="@string/scan_button"
-                            android:textColor="@color/white"
-                            android:textSize="28sp"/>
-
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="58dp"
-                            android:text="@string/scan_descriptor"
-                            android:textColor="@color/secondaryTextColor"/>
-                </LinearLayout>
-
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="58dp"
+                        android:text="@string/scan_descriptor"
+                        android:textColor="@color/secondaryTextColor"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <!--Recommendations Cardview -->
         <android.support.v7.widget.CardView
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            app:cardCornerRadius="15dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="415dp"
-            android:layout_marginEnd="10dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                app:cardCornerRadius="15dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="430dp"
+                android:layout_marginEnd="16dp"
 
-            android:elevation="12dp"
-            app:cardBackgroundColor="@color/darkPrimaryColor"
-            app:cardElevation="4dp"
-            android:clickable="true"
-            android:onClick="onClickListenerRecommendation">
+                android:elevation="12dp"
+                app:cardBackgroundColor="@color/darkPrimaryColor"
+                app:cardElevation="4dp"
+                android:clickable="true"
+                android:onClick="onClickListenerRecommendation"
+                android:layout_marginBottom="25dp"
+                android:id="@+id/tipscard">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:padding="16dp">
+                    android:padding="16dp" android:layout_alignTop="@+id/tipscard">
 
-                    <TextView
+                <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
                         android:text="@string/recommendation_button"
                         android:textColor="@color/white"
-                        android:textSize="30sp" />
+                        android:textSize="30sp"/>
 
-                    <TextView
+                <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="58dp"
                         android:text="@string/recommendation_descriptor"
-                        android:textColor="@color/secondaryTextColor" />
-                </LinearLayout>
-                <!--
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0"
-                        android:text="@string/scan_button"
-                        android:textAlignment="center"
-                        android:textColor="@color/secondaryTextColor"
-                        android:theme="@style/PrimaryFlatButton" />
-                </LinearLayout>
-                -->
+                        android:textColor="@color/secondaryTextColor"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
         <!--Wifi Cardview -->
         <android.support.v7.widget.CardView
-                android:layout_width="335dp"
+                android:layout_width="match_parent"
                 android:layout_height="160dp"
                 app:cardCornerRadius="15dp"
                 android:layout_marginTop="600dp"
@@ -189,38 +152,29 @@
                 app:cardBackgroundColor="@color/darkPrimaryColor"
                 app:cardElevation="4dp"
                 android:clickable="true"
-                android:onClick="onClickListenerWifi">
+                android:onClick="onClickListenerWifi" android:id="@+id/wificard">
 
             <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
-
-                    android:orientation="vertical">
-
-                <LinearLayout
+                <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:padding="16dp">
+                        android:layout_marginBottom="4dp"
 
-                    <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
+                        android:text="@string/wifi_button"
+                        android:textColor="@color/white"
+                        android:textSize="40sp"/>
 
-                            android:text="@string/wifi_button"
-                            android:textColor="@color/white"
-                            android:textSize="40sp"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="58dp"
 
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="58dp"
-
-                            android:text="@string/wifi_descriptor"
-                            android:textColor="@color/secondaryTextColor"/>
-                </LinearLayout>
-
+                        android:text="@string/wifi_descriptor"
+                        android:textColor="@color/secondaryTextColor"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
