--- a/app/src/main/res/layout/activity_wifi.xml
+++ b/app/src/main/res/layout/activity_wifi.xml
@@ -3,7 +3,10 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent" tools:layout_editor_absoluteY="25dp">
+                                             android:layout_height="wrap_content" tools:layout_editor_absoluteY="25dp">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
 
     <LinearLayout
@@ -82,6 +85,23 @@
                 android:layout_height="350dp"
                 android:id="@+id/wificonnection"></com.github.mikephil.charting.charts.PieChart>
 
+        <TextView
+                android:text="@string/wifi_plot1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:textColor="@color/accentColor"
+                android:id="@+id/throughputplot1"/>
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:layout_height="350dp"
+            android:layout_width="match_parent"
+            android:id="@+id/wifithroughput"></com.github.mikephil.charting.charts.LineChart>
+
 
     </LinearLayout>
+
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
